*BugFix* fixed login page on mobile

--- a/src/assets/styles/cmps/_board-header.scss
+++ b/src/assets/styles/cmps/_board-header.scss
@@ -70,6 +70,7 @@
       justify-content: center;
       align-items: center;
       gap: 5px;
+      height: 100%;
 
 
       &:hover {
